# logic_compute_shaders

./: Cargo.toml  LICENSE  README.md
assets/: game_of_life.wgsl  gpu_sort.wgsl  grayscale.wgsl  particle.wgsl  particle_render.wgsl  particle_update.wgsl  utils.wgsl
src/: compute_utils.rs  main.rs  particle.rs  particle_config.rs  particle_render.rs  particle_system.rs  particle_ui.rs  particle_update.rs  system_runner.rs
