[package]
name = "logic_gpu_particles"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.0" }
bevy_egui = "0.25.0"
bevy-inspector-egui = "0.23.2"
bevy_mod_debugdump = "0.9"
wgpu = "0.19.1"
serde = "1.0.197"
serde_json = "1.0.114"
rand = "0.8.5"
rand_distr = "0.4.3"
